# animal_aggregator

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: main.yml
art/: animals.blend  animals.blend1
assets/: animals.glb  animals.gltf
src/: main.rs
