[package]
name = "bevy_sandbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.8.0" }
bevy-inspector-egui = "0.12.1"
bevy_rapier3d = "0.16.1"
libudev = "0.3.0"
rand = "0.8.5"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3
